tests/baselines/reference/withStatementNestedScope.errors.txt
tests/cases/compiler/withStatementNestedScope.ts(2,1): error TS2410: Unsupported 'with' statement, all symbols within a 'with' block will be resolved to 'any'.


==== tests/cases/compiler/withStatementNestedScope.ts (1 errors) ====
    var x = 1;
    with (x) {
    ~~~~~~~~
!!! error TS2410: Unsupported 'with' statement, all symbols within a 'with' block will be resolved to 'any'.
        function f(a: number) {
            return 1;
        }
        // should be any
        var r = f(1);
    }